syntax = "proto3";

option csharp_namespace = "Crew";

package crew;

import "google/protobuf/empty.proto";

service Crew {
  rpc ReadLogbook (google.protobuf.Empty) returns (stream LogbookReply);
  rpc ReadSingleEntryLogbook (SingleLogbookEntryRequest) returns (LogbookReply);
  rpc ReadSingleCrewMember (SingleCrewMemberRequest) returns (CrewReply);
  rpc ReadCrew (google.protobuf.Empty) returns (CrewReplies);
  rpc CreateCrew (CreateCrewRequest) returns (CrewReply);
  rpc UpdateCrew (UpdateCrewRequest) returns (CrewReply);
  rpc CreateLogbookEntry (LogbookEntryRequest) returns (LogbookReply);
}

message SingleLogbookEntryRequest {
  int32 id = 1;
}

message LogbookReply {
  int32 logId = 1;
  string title = 2;
  string content = 3;
  int32 authorId = 4;
  CrewReply author = 5;
}

message SingleCrewMemberRequest {
  int32 crewMemberId = 1;
}

message CrewReplies {
  repeated CrewReply crew = 1;
}

message CrewReply {
  int32 crewMemberId = 1;
  int32 health = 2;
  string role = 3;
}

message LogbookEntryRequest {
  string title = 1;
  string content = 2;
  int32 authorId = 3;
}

message CreateCrewRequest {
  int32 health = 1;
  Role role = 2;
}

message UpdateCrewRequest {
  int32 crewMemberId = 1;
  int32 health = 2;
}

enum Role {
  COMMANDER = 0;
  DROID = 1;
  GUARD = 2;
  MECHANIC = 3;
}